infrastructure/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
  selector:
    app: my-server
